// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Constructor component snapshot tests renders correctly with only serverUrl 1`] = `
"def __init__(self, url: str = \\"wss://example.com\\"):

        \\"\\"\\"
        Constructor to initialize the WebSocket client.

        Args:
            url (str, optional): The WebSocket server URL. Use it if the server URL is 
            different from the default one taken from the AsyncAPI document.
        \\"\\"\\"
        self.ws_app = None  # Instance of WebSocketApp
        self.message_handlers = []      # Callables for incoming messages
        self.error_handlers = []        # Callables for errors
        self.outgoing_processors = []   # Callables to process outgoing messages
        self._stop_event = threading.Event()
      
      

        
        self.url = url"
`;

exports[`Constructor component snapshot tests renders correctly with serverUrl and query parameters 1`] = `
"def __init__(self, url: str = \\"wss://example.com\\", param1: str = \\"value1\\", param2: str = \\"value2\\"):

        \\"\\"\\"
        Constructor to initialize the WebSocket client.

        Args:
            url (str, optional): The WebSocket server URL. Use it if the server URL is 
            different from the default one taken from the AsyncAPI document.
 param1 (str, optional):If provided (or if PARAM1 environment variable is set), added as ?param1=… to URL
 param2 (str, optional):If provided (or if PARAM2 environment variable is set), added as ?param2=… to URL
        \\"\\"\\"
        self.ws_app = None  # Instance of WebSocketApp
        self.message_handlers = []      # Callables for incoming messages
        self.error_handlers = []        # Callables for errors
        self.outgoing_processors = []   # Callables to process outgoing messages
        self._stop_event = threading.Event()
      
        params = {}
        param1 = param1 or os.getenv(\\"PARAM1\\")
        if param1 is not None:
          params[\\"param1\\"] = param1
        param2 = param2 or os.getenv(\\"PARAM2\\")
        if param2 is not None:
          params[\\"param2\\"] = param2

        qs = urlencode(params) if params else \\"\\"
        self.url = f\\"{url}{f'?{qs}' if qs else ''}\\""
`;

exports[`Constructor component snapshot tests renders correctly without serverUrl and query 1`] = `
"def __init__(self, url: str = \\"null\\"):

        \\"\\"\\"
        Constructor to initialize the WebSocket client.

        Args:
            url (str, optional): The WebSocket server URL. Use it if the server URL is 
            different from the default one taken from the AsyncAPI document.
        \\"\\"\\"
        self.ws_app = None  # Instance of WebSocketApp
        self.message_handlers = []      # Callables for incoming messages
        self.error_handlers = []        # Callables for errors
        self.outgoing_processors = []   # Callables to process outgoing messages
        self._stop_event = threading.Event()
      
      

        
        self.url = url"
`;
